correct init of game and better css

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
   <title>New DominoGame</title>
 </head>
 <body>
-  <div class="Title"> DOMINO </div>
+  <div class="title"> DOMINO GAME</div>
+
   <div class="boardTable"></div>
+
   <button class="startGame">Start Game</button>
+
   <div class="player">
       <div class="namePlayer">Player 1</div>
       <div id="dominoesPlayerOne"></div>
+      <button class="picNewDomino">Pick new Domino</button>
   </div>
   <div class="player">
       <div class="namePlayer">Player 2</div>
       <div id="dominoesPlayerTwo"></div>
+      <button class="picNewDomino">Pick new Domino</button>
   </div>
 
 
