--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/dominobox.js"></script>
   <script src="js/player.js"></script>
+  <script src="js/board.js"></script>
   <script src="js/app.js"></script>
-  <!--<script src="js/board.js"></script>
 
 
-  -->
 </body>
 </html>
