onckic dont work on dominoes of player

--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 <body>
   <div class="title"> DOMINO GAME</div>
 
-  <div class="boardTable"></div>
+  <div class="boardtable"></div>
 
-  <button class="startGame">Start Game</button>
+  <button class="startgame">Start Game</button>
 
   <div class="player">
-      <div class="namePlayer">Player 1</div>
-      <div id="dominoesPlayerOne"></div>
-      <button class="picNewDomino">Pick new Domino</button>
+      <div class="nameplayer">Player 1</div>
+      <div id="dominoesplayerone"></div>
+      <button class="picnewdomino">Pick new Domino</button>
   </div>
   <div class="player">
-      <div class="namePlayer">Player 2</div>
-      <div id="dominoesPlayerTwo"></div>
-      <button class="picNewDomino">Pick new Domino</button>
+      <div class="nameplayer">Player 2</div>
+      <div id="dominoesplayertwo"></div>
+      <button class="picnewdomino">Pick new Domino</button>
   </div>
-
 
 
 
