pick new domino but bug on graphic verification

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <div class="player">
       <div class="nameplayer">Player 1</div>
       <div id="dominoesplayerone"></div>
-      <button class="picnewdomino">Pick new Domino</button>
+      <button type="button" class="picknewdomino">Pick new Domino</button>
   </div>
   <div class="player">
       <div class="nameplayer">Player 2</div>
       <div id="dominoesplayertwo"></div>
-      <button class="picnewdomino">Pick new Domino</button>
+      <button type="button" class="picknewdomino">Pick new Domino</button>
   </div>
 
 
