--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <button class="startgame">Start Game</button>
 
+<div id="gameover">Game is running</div>
+
   <div class="player">
       <div class="nameplayer">Player 1</div>
       <div id="dominoesplayerone"></div>
