before start changing dom numbers to images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <button class="startgame">Start Game</button>
 
-<div id="gameover">Game is running</div>
+<div id="gamestate">Press button to start game</div>
+<img src="./img/DOS.png" style="width:20px;height:20px;">
 
   <div class="player">
       <div class="nameplayer">Player 1</div>
