--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
   <div class="boardtable"></div>
 
-  <button class="startgame">Start Game</button>
-
 <div id="gamestate">Press button to start game</div>
 
+<div class="buttonstart">
+  <button class="startgame">Start Game</button>
+</div>
 
   <div class="player">
       <div class="nameplayer">Player 1</div>
