more information for player

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <div class="title"> DOMINO GAME</div>
+  <span class="firma">By Jorge Abad</span>
 
   <div class="boardtable"></div>
 
